# lakesql

./: Cargo.toml  README.md  demo.rs  demo_test.rs
crates/lakesql-aws/: Cargo.toml
crates/lakesql-aws/src/: lib.rs
crates/lakesql-cli/: Cargo.toml
crates/lakesql-cli/src/: main.rs
crates/lakesql-core/: Cargo.toml
crates/lakesql-core/src/: backend.rs  lib.rs  permissions.rs  types.rs
crates/lakesql-emulator/: Cargo.toml
crates/lakesql-emulator/src/: engine.rs  expression.rs  lib.rs  storage.rs
crates/lakesql-parser/: Cargo.toml
crates/lakesql-parser/src/: grammar.pest  lib.rs
crates/lakesql-wasm/: Cargo.toml
examples/: backend_comparison.rs
