[package]
name = "lakesql-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

# Optional AWS backend
lakesql-aws = { path = "../lakesql-aws", optional = true }
lakesql-emulator = { path = "../lakesql-emulator", optional = true }

[features]
default = ["emulator"]
aws = ["lakesql-aws"]
emulator = ["lakesql-emulator"]
full = ["aws", "emulator"]